<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentJogo">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:text="@string/titulo"
        android:textAlignment="center"
        tools:ignore="MissingConstraints" />

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linear1"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/jogador1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/jogador1"    />

        <TextView
            android:id="@+id/placar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/placar1"
            />





    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear2"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/jogador2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/jogador2" />


        <TextView
            android:id="@+id/placar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/placar2"

            />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <Button android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/bt00"></Button>

            <Button android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/bt01"></Button>

            <Button android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/bt02"></Button>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <Button android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/bt10"></Button>

            <Button android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/bt11"></Button>

            <Button android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/bt12"></Button>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <Button android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/bt20"></Button>

            <Button android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/bt21"></Button>

            <Button android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/bt22"></Button>

        </TableRow>



    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>